--- a/PersonalUchet/MainWindow.xaml
+++ b/PersonalUchet/MainWindow.xaml
@@ -6,7 +6,62 @@
         xmlns:local="clr-namespace:PersonalUchet"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="850">
+
+    <Window.Resources>
+        
+    </Window.Resources>
+    
     <Grid>
+
+        
+
+            <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="0.3*" ></RowDefinition>
+        </Grid.RowDefinitions>
+
+        <ListBox x:Name="listBoxEmployees" Grid.Row="0">
+            <ListBox.ItemContainerStyle>
+                <Style >
+                    <Setter Property="ListBoxItem.Margin"  Value="5"/>
+                    <Setter Property="ListBoxItem.Padding" Value="5"/>
+                    <Setter Property="ListBoxItem.Background" Value="LightSteelBlue"/>
+                    <Setter Property="ListBoxItem.Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                <Border x:Name="brd" >
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition></ColumnDefinition>
+                                            <ColumnDefinition></ColumnDefinition>
+                                            <ColumnDefinition></ColumnDefinition>
+                                            <ColumnDefinition></ColumnDefinition>
+                                            <ColumnDefinition></ColumnDefinition>
+                                        </Grid.ColumnDefinitions>
+                                        <TextBlock Text="{Binding Path=FIO}" Grid.Column="0"></TextBlock>
+                                        <TextBlock Text="{Binding Sex}" Grid.Column="1"></TextBlock>
+                                        <TextBlock Text="{Binding BirthDate}" Grid.Column="2"></TextBlock>
+                                        <TextBlock  Grid.Column="3">UnicProperty</TextBlock>
+                                        <Button x:Name="btnEditEmployee"  Grid.Column="4" Click="btnEditEmployee_Click">Редактировать</Button>
+                                    </Grid>
+                                </Border>
+                                
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListBox.ItemContainerStyle>
+            
+        </ListBox>
+        
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Orientation="Horizontal">
+            <Button x:Name="btnAddNewEmployee" Content="Добавить" Padding="10" Click="btnAddNewEmployee_Click"/>
+            <Button Margin="30,0,0,0" Padding="10">Удалить</Button>
+            
+        </StackPanel>
         
     </Grid>
 </Window>
